# Context-Trace

./: .env.example  .gitignore  ANONYMOUS_ARTIFACT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_BACKUP.md  README.md  REPRODUCIBILITY.md  SECURITY.md  docker-compose.yml  pytest.ini
.contexttrace/: contexttrace.db
.github/: pull_request_template.md
.tmp-ragtruth-review/: run_assisted_review.py
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/routes/: evals.py  external_endpoints.py  playground.py  traces.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/judge/: __init__.py  base.py  mock.py  openai_compatible.py
apps/api/app/models/: __init__.py  entities.py  enums.py
apps/api/app/playground/: __init__.py  documents.py  policy.py  providers.py  retrieval.py  samples.py  vector_store.py
apps/api/app/schemas/: __init__.py  evals.py  external_endpoints.py  playground.py  reliability.py  traces.py
apps/api/app/services/: citation_verifier.py  errors.py  evals.py  external_endpoints.py  failure_analyzer.py  playground.py  reliability_scorer.py  structured_json.py  traces.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_initial.py  0002_eval_sets.py  0003_external_rag_endpoints.py  0004_agent_events.py
apps/api/tests/: conftest.py  test_context_policy.py  test_external_endpoints.py  test_playground.py  test_reliability_scorer.py  test_trace_api.py
artifacts/: ANONYMIZATION_CHECKLIST.md  (+1 more)
(+377 files in other folders)
