[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contexttrace-api"
version = "0.1.0"
description = "FastAPI backend for ContextTrace RAG reliability tracing."
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.111",
    "httpx>=0.27",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.9",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "typing-extensions>=4.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
